language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_unqualified_with_existing_import_not_at_top.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\nimport wibble.{Wobble}\n\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- BEFORE ACTION

import wobble
import wibble.{Wobble}

fn wibble(wobble: Wibble) -> Nil { Nil }
                  ↑                     


----- AFTER ACTION

import wobble
import wibble.{Wobble, type Wibble}

fn wibble(wobble: Wibble) -> Nil { Nil }
