language-server/src/tests/snapshots/gleam_language_server__tests__action__import_type_unqualified_with_existing_import_with_unqualified_items.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble.{Wobble}\n\nfn wibble(wobble: Wibble) -> Nil { Nil }\n"
---
----- BEFORE ACTION

import wibble.{Wobble}

fn wibble(wobble: Wibble) -> Nil { Nil }
                  ↑                     


----- AFTER ACTION

import wibble.{Wobble, type Wibble}

fn wibble(wobble: Wibble) -> Nil { Nil }
