language-server/src/tests/snapshots/gleam_language_server__tests__action__inexhaustive_let_result_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(result) {\n  let Ok(value) = result\n}"
---
----- BEFORE ACTION
pub fn main(result) {
  let Ok(value) = result
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
pub fn main(result) {
  let value = case result {
    Ok(value) -> value
    Error(_) -> todo
  }
}
