language-server/src/tests/snapshots/gleam_language_server__tests__action__inexhaustive_let_string_prefix_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let \"_\" <> thing = \"_Hello\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  let "_" <> thing = "_Hello"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑         
}


----- AFTER ACTION
pub fn main() {
  let thing = case "_Hello" {
    "_" <> thing -> thing
    _ -> todo
  }
}
